--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,17 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-<<<<<<< HEAD
-      type="image/x-icon"
-      href="/client/src/img/LogoCopilote_1.ico"
-=======
-      href="%PUBLIC_URL%/COPILOTE.ico"
-      sizes="32x32"
-      type="image/png"
->>>>>>> 0b53e1c37b7490a0164c1d895f2eb6e4b68da561
-    />
+    <link rel="icon" type="image/png" href="logo-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
